Added review component and review api

--- a/Kitchen.Api/appsettings.json
+++ b/Kitchen.Api/appsettings.json
@@ -1,8 +1,7 @@
 {
   "KitchenDbSetting": {
-    "KitchenCollectionName": "Recipes",
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "KitchenDb"
+    "ConnectionString": "mongodb+srv://cdc_mitrais:cdc_mitrais123@cluster0.awqzy.mongodb.net",
+    "DatabaseName": "cdc_kitchen"
   },
   "Logging": {
     "LogLevel": {
