--- a/Kitchen.Api/Kitchen.Api.csproj
+++ b/Kitchen.Api/Kitchen.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Kitchen.Model\Kitchen.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
